# douyin_mcp

./: .env.example  .gitignore  CURSOR_MCP_SETUP.md  DEPLOYMENT_READY.md  DOUYIN_LOGIN_GUIDE.md  DOUYIN_LOGIN_SOLUTION.md  FINAL_STATUS.md  MCP_CONFIG_FIXED.md  MCP_CURSOR_CONFIGURED.md  MCP_FUNCTIONALITY_CONFIRMED.md  MCP_RED_DOT_TROUBLESHOOTING.md  MCP_STATUS_REPORT.md  MONITOR_TASK_CREATED.md  PORT_ISSUE_RESOLVED.md  PROJECT_STATUS.md  README.md  TOOLS_OVERVIEW.md  TRENDING_TOPICS_RESULT.md  cursor_mcp_config.json  mcp_config.json  pyproject.toml  requirements.txt  start_mcp.py  start_mcp_cursor.py  start_server.py  test_server.py  抖音自动回复评论监测工具.txt
data/: douyin_mcp.db  error_page.html
data/sessions/: demo_cookies.json  douyin_cookies.json  douyin_cookies_example.json  manual_cookies_example.json
data/templates/: legal_reply_templates.json
docker/: Dockerfile  docker-compose.yml
scripts/: init_db.py  start.py
src/analytics/: __init__.py  analytics_engine.py  tools.py
src/auth/: __init__.py  auth_manager.py  browser_manager.py  exceptions.py  models.py  tools.py
src/config/: __init__.py  database.py  redis_config.py  settings.py
src/content/: __init__.py  content_analyzer.py  tools.py
src/core/: __init__.py  exceptions.py  main.py  mcp_server.py  tool_registry.py
src/monitor/: __init__.py  exceptions.py  models.py  monitor_engine.py  tools.py
src/reply/: models.py
