[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "douyin-lawyer-mcp"
version = "1.0.0"
description = "抖音律师MCP工具 - 自动评论监测与智能回复系统"
authors = [
    {name = "Lawyer MCP Team", email = "team@lawyer-mcp.com"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Legal Professionals",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Office/Business :: Professional",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["douyin", "lawyer", "mcp", "comment", "automation", "ai"]

dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "mcp>=1.0.0",
    "aiofiles>=23.2.1",
    "aiohttp>=3.9.1",
    "httpx>=0.25.2",
    "pandas>=2.1.4",
    "numpy>=1.25.2",
    "playwright>=1.40.0",
    "openai>=1.3.7",
    "anthropic>=0.7.8",
    "redis>=5.0.1",
    "sqlalchemy[asyncio]>=2.0.23",
    "asyncpg>=0.29.0",
    "celery>=5.3.4",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.2",
    "rich>=13.7.0",
    "cryptography>=41.0.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-mock>=3.12.0",
    "black>=23.11.0",
    "flake8>=6.1.0",
    "isort>=5.12.0",
    "mypy>=1.7.1",
    "pre-commit>=3.6.0",
]

monitoring = [
    "prometheus-client>=0.19.0",
    "psutil>=5.9.6",
    "grafana-api>=1.0.3",
]

ai = [
    "transformers>=4.36.2",
    "torch>=2.1.0",
    "jieba>=0.42.1",
    "scikit-learn>=1.3.2",
]

[project.urls]
Homepage = "https://github.com/lawyer-mcp/douyin-comment-mcp"
Documentation = "https://docs.lawyer-mcp.com"
Repository = "https://github.com/lawyer-mcp/douyin-comment-mcp.git"
"Bug Tracker" = "https://github.com/lawyer-mcp/douyin-comment-mcp/issues"

[project.scripts]
douyin-mcp = "src.core.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["src"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "playwright.*",
    "selenium.*",
    "celery.*",
    "redis.*",
    "jieba.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/.venv/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
